maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:4: error: value nord is not a member of object plm.universe.Direction
    while(getDirection!=Direction.nord)
                                  ^